--- a/WindowsFormsApp1/WindowsFormsApp1.csproj
+++ b/WindowsFormsApp1/WindowsFormsApp1.csproj
@@ -46,10 +46,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DrawBitmap.cs" />
-    <Compile Include="..\..\..\..\..\..\booms\c#\vector\vector\Form1.cs">
+    <Compile Include="Form1.cs">
       <Link>Form1.cs</Link>
     </Compile>
-    <Compile Include="..\..\..\..\..\..\booms\c#\vector\vector\Form1.Designer.cs">
+    <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
       <Link>Form1.Designer.cs</Link>
     </Compile>
@@ -58,7 +58,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="vector.cs" />
-    <EmbeddedResource Include="..\..\..\..\..\..\booms\c#\vector\vector\Form1.resx">
+    <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
       <Link>Form1.resx</Link>
     </EmbeddedResource>
