--- a/WindowsFormsApp1/vector_proga.csproj
+++ b/WindowsFormsApp1/vector_proga.csproj
@@ -54,6 +54,12 @@
       <Link>Form1.Designer.cs</Link>
     </Compile>
     <Compile Include="Image.cs" />
+    <Compile Include="main_window.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="main_window.Designer.cs">
+      <DependentUpon>main_window.cs</DependentUpon>
+    </Compile>
     <Compile Include="measurement.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -61,6 +67,9 @@
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
       <Link>Form1.resx</Link>
+    </EmbeddedResource>
+    <EmbeddedResource Include="main_window.resx">
+      <DependentUpon>main_window.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
